Move Gradle module to Java 17 and NbProjectInfoAction to Java 8